and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


## Unreleased
### Added
- [FRONTEND] Redis stream support for input log
- [FRONTEND] Allow to simply use local Redis without worrying about parameters when creating a Redis Listener
- [REDIS] Password support for local redis
- [REDIS] New api function set_password and set_replica_of
### Changed
- [CLUSTER] Evolve daemon's code to allow correctly handling tasks during service shutdowns
- [API] Increase API key length for new clusters from 16 to 32 characters
- [INSTALL] Improve and stabilize the Redis bootstrapping process
- [CONFIG] [API] Remove the object ID from the API: there is only one configuration object!
### Fixed
- [FRONTEND] Allow skipping unresponsive nodes during HAProxy test_conf
- [REPUTATION] Changed predator references to barricade
- [REPUTATION_CTX] Ensure internally defined DBs cannot be modified
- [SYSTEM] [PKI] Fix wrong ca.key after cluster_join
- [API_PARSER] Connect automatically to redis matser
- [API_PARSER] [TRENDMICRO_VISIONONE] Correctly handle errors in log fetches
- [API_PARSER] [TRENDMICRO_VISIONONE] Avoid 429 errors by increasing default pagination
- [API_PARSER] [TRENDMICRO_VISIONONE] Delay log fetching by 5 minutes to be sure to get all logs
- [HAPROXY] [LISTENERS] Put back a correct 60s server timeout for Rsyslog/Filebeat communication


## [2.14.3] - 2024-02-20
### Fixed
- [REPUTATION] Changed predator references to barricade


## [2.14.2] - 2024-02-19
### Changed
- [API_PARSER] [VECTRA] Store current access token to avoid re-generating it every time
- [DEPENDENCIES] Python dependencies upgrade
  - aiohttp 3.9.1 -> 3.9.3
  - attrs 23.1.0 -> 23.2.0
  - beautifulsoup4 4.12.2 -> 4.12.3
  - boto3 1.33.2 -> 1.34.32
  - botocore 1.33.2 -> 1.34.32
  - bs4 0.0.1 -> removed
  - cryptography 41.0.7 -> 42.0.2
  - django 4.2.7 -> 4.2.9
  - djongo 1.3.6_2 -> 1.3.6.post3
  - frozenlist 1.4.0 -> 1.4.1
  - google-api-core 2.14.0 -> 2.16.1