@@ -74,6 +74,13 @@ ROTATION_PERIOD_CHOICES = (
     ('yearly', "Every year")
 )
 
+OMHIREDIS_MODE_CHOICES = (
+    ('queue', "Queue/list mode, using lpush/rpush"),
+    ('set', "Set/keys mode, using set/setex"),
+    ('publish', "Channel mode, using publish"),
+    ('stream', "Stream mode, using xadd"),
+)
+
 CONF_PATH = "/usr/local/etc/rsyslog.d/10-applications.conf"
 JINJA_PATH = "/home/vlt-os/vulture_os/applications/logfwd/config/"
 
@@ -419,10 +426,40 @@ class LogOMRELP(LogOM):
 class LogOMHIREDIS(LogOM):
     target = models.TextField(null=False, default="1.2.3.4")
     port = models.IntegerField(null=False, default=6379)
+    mode = models.TextField(
+        default=OMHIREDIS_MODE_CHOICES[0][0],
+        choices=OMHIREDIS_MODE_CHOICES,
+        help_text=_("Specify how Rsyslog insert logs in Redis"),
+        verbose_name=_("Redis insertion mode"),
+    )
     key = models.TextField(null=False, default="MyKey")
     dynamic_key = models.BooleanField(default=False)
     pwd = models.TextField(blank=True, default=None)
     enabled = models.BooleanField(default=True)
+    use_rpush = models.BooleanField(
+        default=False,
+        blank=True,
+        help_text=_("Use RPUSH instead of LPUSH in list mode"),
+        verbose_name=_("Use RPUSH"),
+    )
+    expire_key = models.PositiveIntegerField(
+        default=0,
+        blank=True,
+        help_text=_("Use SETX instead of SET in key mode with an expiration in seconds"),
+        verbose_name=_("Expiration of the key (s)"),
+    )
+    stream_outfield = models.TextField(
+        default="msg",
+        blank=True,
+        help_text=_("Set the name of the log index in stream mode"),
+        verbose_name=_("Index name of the log"),
+    )
+    stream_capacitylimit = models.PositiveIntegerField(
+        default=0,
+        blank=True,
+        help_text=_("Set a maximum size of a stream to prevent out of range index"),
+        verbose_name=_("Maximum stream size"),
+    )
 
     def to_dict(self, fields=None):
         result = model_to_dict(self, fields=fields)
@@ -457,11 +494,15 @@ class LogOMHIREDIS(LogOM):
         template.update({
             'target': self.target,
             'port': self.port,
+            'mode': self.mode,
             'key': key,
             'dynamic_key': self.dynamic_key,
             'pwd': self.pwd,
+            'use_rpush': self.use_rpush,
+            'expire_key': self.expire_key,
+            'stream_outfield': self.stream_outfield,
+            'stream_capacitylimit': self.stream_capacitylimit,
             'type': 'Redis',
-            'mode': "queue",
             'output': f"{self.target}:{self.port} (key = {self.key})"
         })
         return template
