@@ -1,0 +1,40 @@
+# Generated by Django 4.2.7 on 2024-02-21 14:23
+
+import django.core.validators
+from django.db import migrations, models
+import djongo.models.fields
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('applications', '0022_alter_logomkafka_confparam_and_more'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='logomhiredis',
+            name='expire_key',
+            field=models.PositiveIntegerField(blank=True, default=0, help_text='Use SETX instead of SET in key mode with an expiration in seconds', verbose_name='Expiration of the key (s)'),
+        ),
+        migrations.AddField(
+            model_name='logomhiredis',
+            name='mode',
+            field=models.TextField(choices=[('queue', 'Queue/list mode, using lpush/rpush'), ('set', 'Set/keys mode, using set/setex'), ('publish', 'Channel mode, using publish'), ('stream', 'Stream mode, using xadd')], default='queue', help_text='Specify how Rsyslog insert logs in Redis', verbose_name='Redis insertion mode'),
+        ),
+        migrations.AddField(
+            model_name='logomhiredis',
+            name='stream_capacitylimit',
+            field=models.PositiveIntegerField(blank=True, default=0, help_text='Set a maximum size of a stream to prevent out of range index', verbose_name='Maximum stream size'),
+        ),
+        migrations.AddField(
+            model_name='logomhiredis',
+            name='stream_outfield',
+            field=models.TextField(blank=True, default='msg', help_text='Set the name of the log index in stream mode', verbose_name='Index name of the log'),
+        ),
+        migrations.AddField(
+            model_name='logomhiredis',
+            name='use_rpush',
+            field=models.BooleanField(blank=True, default=False, help_text='Use RPUSH instead of LPUSH in list mode', verbose_name='Use RPUSH'),
+        ),
+    ]
